fix whitespace wrap

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
     padding: 16px;
     overflow-x: hidden;
     border-radius: 8px;
+    white-space: nowrap;
 }
 
 .card > p {
